Fix distorted layout caused by long channel names in embedded claims

--- a/ui/scss/component/_markdown-preview.scss
+++ b/ui/scss/component/_markdown-preview.scss
@@ -252,6 +252,7 @@
         display: inline-block;
         white-space: nowrap;
         width: 100%;
+        max-width: 600px;
       }
 
       &:hover {
